@@ -1,22 +1,32 @@
 package dev.lpa;
 
-import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.net.*;
 
 public class Main {
     public static void main(String[] args) {
-        try{
-//            URI uri = new URI("http://username:password@myserver.com:5000/catalogue/phones?os=android#samsung");
-            URI baseUri = new URI("http://username:password@myserver.com:5000");
-            URI uri = new URI("/catalogue/phones?os=android#samsung");
-            URI resolvedUri = baseUri.resolve(uri);
+        try {
+            URL url = new URL("http://example.org");
+            URLConnection urlConnection = url.openConnection();
+            urlConnection.setDoOutput(true);
+            urlConnection.connect();
 
-            URL url = resolvedUri.toURL();
-            System.out.println("URL = " + url);
-//            URI uri = new URI("hello");
+            BufferedReader inputStream = new BufferedReader(
+                    new InputStreamReader(urlConnection.getInputStream()));
 
+            String line = "";
+            while (line != null) {
+                line = inputStream.readLine();
+                System.out.println(line);
+            }
+        }catch (MalformedURLException e){
+            System.out.println("Malformed URL: " + e.getMessage());
+        }catch (IOException e){
+            System.out.println("IOException: " + e.getMessage());
+
+//            URI uri = url.toURI();
 
 //            System.out.println("Schema = " + uri.getScheme());
 //            System.out.println("Schema-specific part = " + uri.getSchemeSpecificPart());
@@ -28,10 +38,31 @@ public class Main {
 //            System.out.println("Query = " + uri.getQuery());
 //            System.out.println("Fragment = " + uri.getFragment());
 
-        }catch (URISyntaxException e){
-            System.out.println("URI Bad Syntax: " + e.getMessage());
-        }catch (MalformedURLException e){
-            System.out.println("URL Malformed: " + e.getMessage());
+//            URI uri = new URI("http://username:password@myserver.com:5000/catalogue/phones?os=android#samsung");
+//            URI baseUri = new URI("http://username:password@mynewserver.com:5000");
+//            URI uri1 = new URI("/catalogue/phones?os=android#samsung");
+//            URI uri2 = new URI("/catalogue/tvs?manufacture=samsung");
+//            URI uri3 = new URI("/store/locations?zip=12345");
+//
+//            URI resolvedUri1 = baseUri.resolve(uri1);
+//            URI resolvedUri2 = baseUri.resolve(uri2);
+//            URI resolvedUri3 = baseUri.resolve(uri3);
+//
+//
+//            URL url1 = resolvedUri1.toURL();
+//            System.out.println("URL 1 = " + url1);
+//            URL url2 = resolvedUri2.toURL();
+//            System.out.println("URL 2 = " + url2);
+//            URL url3 = resolvedUri3.toURL();
+//            System.out.println("URL 3 = " + url3);
+//
+//            URI relativeURI = baseUri.relativize(resolvedUri2);
+//            System.out.println("Relative URI = " + relativeURI);
+//
+//        }catch (URISyntaxException e){
+//            System.out.println("URI Bad Syntax: " + e.getMessage());
+//        }catch (MalformedURLException e){
+//            System.out.println("URL Malformed: " + e.getMessage());
         }
     }
 }
